@@ -83,16 +83,15 @@ switch ($sortField) {
 		}
 		break;
 	default:
-		$selectUserIDUp = '';
+		$selectUserIDUp = $selected;
 		$selectUserIDDown = '';
-		$selectFullnameUp = $selected;
+		$selectFullnameUp = '';
 		$selectFullnameDown = '';
 		$selectLastConnectUp = '';
 		$selectLastConnectDown = '';
-		$order = array('field' => 'fullname', 'order' => 'ASC');
+		$order = array('field' => 'id_user', 'order' => 'ASC');
 		break;
 }
-
 
 $buttons[$tab]['active'] = true;
 
@@ -312,9 +311,9 @@ foreach ($info as $user_id => $user_info) {
 	
 	$data[0] = '<a href="index.php?sec='.$sec.'&amp;sec2=godmode/users/configure_user&pure='.$pure.'&amp;id='.$user_id.'">'.$user_id.'</a>';
 	$data[1] = '<ul style="margin-top: 0 !important; margin-left: auto !important; padding-left: 10px !important; list-style-type: none !important;">';
-	$data[1] .= '<li>' . $user_info["fullname"] . '</li>';
-	$data[1] .= '<li><b>' . __('First name') . ':</b> ' . $user_info["firstname"] . '</li>';
-	$data[1] .= '<li><b>' . __('Last name') . ':</b> ' . $user_info["lastname"] . '</li>';
+	$data[1] .= '<li><b>' . __('Name') . ':</b> ' . $user_info["fullname"] . '</li>';
+	/*$data[1] .= '<li><b>' . __('First name') . ':</b> ' . $user_info["firstname"] . '</li>';
+	$data[1] .= '<li><b>' . __('Last name') . ':</b> ' . $user_info["lastname"] . '</li>';*/
 	$data[1] .= '<li><b>' . __('Phone') . ':</b> ' . $user_info["phone"] . '</li>';
 	$data[1] .= '<li><b>' . __('E-mail') . ':</b> ' . $user_info["email"] . '</li>';
 	$data[1] .= '</ul>';
